=== master

* Add dataset_run extension, for building SQL using datasets, and running with Database#run (jeremyevans)

* Switch default connection pool to timed_queue on Ruby 3.2+ (jeremyevans)

=== 5.84.0 (2024-09-01)

* Support creating VIRTUAL tables on SQLite via the create_table :using option (jeremyevans)

* Support json_{exists,value,query} on PostgreSQL 17+ in the pg_json_ops extension (jeremyevans)

* Remove documentation from the gem to reduce gem size by 25% (jeremyevans)

=== 5.83.1 (2024-08-08)

* Restore unescaping of database file paths in the sqlite and amalgalite adapters (jeremyevans) (#2201)

=== 5.83.0 (2024-08-01)

* Make optimistic_locking plugin not keep lock column in changed_columns after updating instance (jeremyevans) (#2196)

* Have defaults_setter plugin pass model instance to default_values callable if it has arity 1 (pedrocarmona) (#2195)

* Support string_agg extension on SQLite 3.44+ (segiddins) (#2191)

* Support schema-qualified table names when using create_table :temp with a Sequel::SQL::QualifiedIdentifier (jeremyevans) (#2185)

* Support MERGE WHEN NOT MATCHED BY SOURCE on PostgreSQL 17+ (jeremyevans)

* Add stdio_logger extension for a minimal logger that Sequel::Database can use (jeremyevans)

* Simplify Database#inspect output to database_type, host, database, and user (jeremyevans)

=== 5.82.0 (2024-07-01)

* Limit tactically eager loading to objects that have the same association reflection (jeremyevans) (#2181)

* Fix race condition in threaded/sharded_threaded connection pools that could cause stalls (jeremyevans)

* Emulate dropping a unique column or a column that is part of an index on SQLite 3.35.0+ (jeremyevans) (#2176)

* Support MERGE RETURNING on PostgreSQL 17+ (jeremyevans)

* Remove use of logger library in bin/sequel (jeremyevans)

* Support :connect_opts_proc Database option for late binding options (jeremyevans) (#2164)

=== 5.81.0 (2024-06-01)
